# data-default-extra

./: .travis.yml  LICENSE  README.md  data-default-instances-unordered-containers.cabal  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml
extra/: ChangeLog.md  LICENSE  README.md  data-default-extra.cabal  generic-examples.hs
extra/src/Data/: Default.hs
extra/src/Data/Default/: Generic.hs
generic/: README.md  data-default-extra-generic.cabal  examples.hs
generic/src/Data/Default/: Generic.hs
instances-bytestring/: ChangeLog.md  README.md  data-default-instances-bytestring.cabal
instances-bytestring/src/Data/Default/Instances/: ByteString.hs
instances-case-insensitive/: ChangeLog.md  README.md  data-default-instances-case-insensitive.cabal
instances-case-insensitive/src/Data/Default/Instances/: CaseInsensitive.hs
instances-new-base/: ChangeLog.md  LICENSE  README.md  data-default-instances-new-base.cabal
instances-new-base/src/Data/Default/Instances/Base/: New.hs
instances-text/: ChangeLog.md  LICENSE  README.md  data-default-instances-text.cabal
instances-text/src/Data/Default/Instances/: Text.hs
instances-unordered-containers/: ChangeLog.md  README.md  data-default-instances-unordered-containers.cabal
instances-unordered-containers/src/Data/Default/Instances/: UnorderedContainers.hs
instances-vector/: ChangeLog.md  LICENSE  README.md  data-default-instances-vector.cabal
instances-vector/src/Data/Default/Instances/: Vector.hs
src/Data/Default/Instances/: UnorderedContainers.hs
