name:                   data-default-extra-generic
version:                0.0.1

synopsis:
  Define instances of Default type class using GHC Generics.
description:
  Define instances of Default type class using GHC Generics.
  .
  Usage example:
  .
  @
  data MyType = MyType Int (Maybe String)

  instance Default MyType where
      def = genericDef
  @
  .
  >>> def :: MyType
  MyType 0 Nothing

homepage:               https://github.com/trskop/data-default-extra
bug-reports:            https://github.com/trskop/data-default-extra/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2016, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:      Data.Default.Generic
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      FlexibleContexts
    , NoImplicitPrelude
    , TypeOperators

  build-depends:
      base <5
    , data-default-class ==0.0.*

  if impl(ghc < 7.6)
    -- GHC.Generics moved from ghc-prim to base with GHC 7.6 release.
    build-depends:      ghc-prim

  ghc-options:          -Wall -fwarn-tabs

source-repository head
  type:                 git
  location:             git://github.com/trskop/data-default-extra.git

--source-repository this
--  type:                 git
--  location:             git://github.com/trskop/data-default-extra.git
--  tag:                  generic-v0.0.1
