name:                   data-default-instances-case-insensitive
version:                0.0.1
synopsis:               Default instance for CI type from case-insensitive package.
-- description:            TODO
homepage:               https://github.com/trskop/data-default-extra
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:      Data.Default.Instances.CaseInsensitive
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:
      case-insensitive >=0.1 && <2
    , data-default-class ==0.0.*

  ghc-options:          -Wall -fwarn-tabs
