name:                   data-default-instances-vector
version:                0.1.0.0
synopsis:               TODO
-- description:
homepage:               https://github.com/trskop/data-default-extra
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
-- copyright:
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:      Data.Default.Instances.Vector
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:
        vector >=0.5 && <1
      , data-default-class ==0.0.*

  ghc-options:          -Wall -fwarn-tabs
